@@ -77,5 +77,7 @@ securesocial {
 		withUserNameSupport=false
 		sendWelcomeEmail=true
 		enableGravatarSupport=true
+		tokenDuration=60
+		tokenDeleteInterval=5
 	}
 }
